--- a/style.css
+++ b/style.css
@@ -2,5 +2,9 @@
     margin-top: 50px;
 }
 #Hpicture{
-    margin-top: 100px;
+    margin-top: 160px;
+    border-radius:200%
+}
+#header-text{
+    margin-top: ;
 }
