--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
     margin-top: 160px;
 }
 #bgimg{
-    background-image: url("images/nature-g29fc3f4be_1920.jpg");
+    background-image: url("images/brown.jpg");
     background-repeat: no-repeat;
     height: 100%
 }
