--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@
 #bgimg{
     background-image: url("images/brown.jpg");
     background-repeat: no-repeat;
+    background-size: cover;
     height: 100%
 }
 #h2ftw{
