--- a/style.css
+++ b/style.css
@@ -3,7 +3,12 @@
 }
 #Hpicture{
     margin-top: 160px;
-    border-radius:50%
+    border-radius:50% ;
+ border-style: groove;
+ border-width: thick;
+ border-color: gray;
+ padding: 10px;
+ float: left;
 }
 #header-text{
     margin-top: 160px;
@@ -64,3 +69,21 @@
 #abouttext{
   margin-left: 11%;
 }
+/* skills */
+/* Make sure that padding behaves as expected */
+* {box-sizing:border-box}
+/* Container for skill bars */
+.container {
+  width: 100%; /* Full width */
+  background-color: #ddd; /* Grey background */
+}
+.skills {
+  text-align: right; /* Right-align text */
+  padding-top: 10px; /* Add top padding */
+  padding-bottom: 10px; /* Add bottom padding */
+  color: white; /* White text color */
+}
+.html {width: 90%; background-color: #04AA6D;} /* Green */
+.css {width: 80%; background-color: #2196F3;} /* Blue */
+.js {width: 65%; background-color: #f44336;} /* Red */
+.php {width: 60%; background-color: #808080;} /* Dark Grey */
