--- a/css/onepage.css
+++ b/css/onepage.css
@@ -22,23 +22,23 @@ html {
     height: 100%;
     padding-top: 150px;
     text-align: center;
-    background: #fff;
+    background:darkseagreen;
 }
 #portfolio{
-    height: 100%;
+    height: 210%;
     padding-top: 150px;
     text-align: center;
-    background: #eee;
+    background:lightblue;
 }
 #testimonials{
     height: 250%;
     padding-top: 150px;
     text-align: center;
-    background: #fff;
+    background: pink;
 }
 #contact{
-    height: 100%;
+    height: 150%;
     padding-top: 150px;
     text-align: center;
-    background: #eee;
+    background: red;
 } 
