--- a/css/style.css
+++ b/css/style.css
@@ -76,7 +76,7 @@ header-text{
 /* Container for skill bars */
 .container {
   width: 100%; /* Full width */
-  background-color: #ddd; /* Grey background */
+  background-color:transparent;
 }
 .skills {
   text-align: right; /* Right-align text */
@@ -97,47 +97,6 @@ header-text{
 #skills{
   margin-top: 0%;
 }
-/* cards */
-    /* #card .container{
-        padding: 40px 0;
-      }
-      .grid {
-        display: grid;
-        grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
-        grid-gap: 20px;
-        align-items: stretch;
-      }
-      .grid > article {
-        border: 1px solid #ccc;
-        box-shadow: 2px 2px 6px 0px rgba(0, 0, 0, 0.3);
-      }
-      .grid > article img {
-        max-width: 100%;
-        max-height:; */
-      /* }
-      .grid .text {
-        padding: 20px;
-      }
-      .container {
-    padding: 40px 0;
-  }
-  .grid {
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
-    grid-gap: 20px;
-    align-items: stretch;
-  }
-  .grid > article {
-    border: 1px solid #ccc;
-    box-shadow: 2px 2px 6px 0px rgba(0, 0, 0, 0.3);
-  }
-  .grid > article img {
-    max-width: 100%;
-  }
-  .grid .text {
-    padding: 20px;
-  } */
-
   /* carosol */
   #demo{
     padding-right:5%;
@@ -262,3 +221,4 @@ img {
   margin-top: 35px;
   text-align: center;
 }
+/* animation */
