--- a/css/onepage.css
+++ b/css/onepage.css
@@ -1,47 +1,47 @@
 body {
-    width: 100%;
-    height: 100%;
+  width: 100%;
+  height: 100%;
 }
 html {
-    width: 100%;
-    height: 100%;
+  width: 100%;
+  height: 100%;
 }
 #home {
-  height:400px;
-  background-color:#BFDFEC;
-    background-repeat:repeat-x;
- background-image:url("https://i.stack.imgur.com/b7z29.png");
-  animation: movement 10s linear infinite; 
+  height: 400px;
+  background-color: #bfdfec;
+  background-repeat: repeat-x;
+  background-image: url("https://i.stack.imgur.com/b7z29.png");
+  animation: movement 10s linear infinite;
 }
 
-#green{
-    height: 34%;
-    padding-top: 0;
-    text-align: center;
-    background:darkseagreen;
+#green {
+  height: 34%;
+  padding-top: 0;
+  text-align: center;
+  background: darkseagreen;
 }
 
-#about{
-    height: 270%;
-    padding-top: 150px;
-    text-align: center;
-    background:white;
+#about {
+  height: 270%;
+  padding-top: 150px;
+  text-align: center;
+  background: white;
 }
-#portfolio{
-    height: 210%;
-    padding-top: 150px;
-    text-align: center;
-    background:lightblue;
+#portfolio {
+  height: 150%;
+  padding-top: 150px;
+  text-align: center;
+  background: lightblue;
 }
-#testimonials{
-    height: 200%;
-    padding-top: 150px;
-    text-align: center;
-    background: white;
+#testimonials {
+  height: 200%;
+  padding-top: 150px;
+  text-align: center;
+  background: white;
 }
-#contact{
-    height: 150%;
-    padding-top: 150px;
-    text-align: center;
-    background:#8ec1da;
-} 
+#contact {
+  height: 150%;
+  padding-top: 150px;
+  text-align: center;
+  background: #8ec1da;
+}
